# quillan

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  quillan.env.example
.github/workflows/: ci.yml
docs/: quickstart.md  quillan2.1  user-guide.md
quillan/: __init__.py  cli.py  config.py  doctor.py  estimate.py  export.py  hooks.py  ingest.py  io.py  llm.py  lock.py  migrate.py  model_pricing.yaml  paths.py  telemetry.py  templates.py  token_tool.py  tts.py  validate.py
quillan/continuity/: __init__.py  aggregator.py  drift.py  queue.py  state.py
quillan/draft/: __init__.py  audit.py  bundle.py  draft.py  prose_analyzer.py  revise.py
quillan/pipeline/: dag.py  runner.py
quillan/structure/: character_arcs.py  character_registry.py  conflicts.py  cover.py  creative_brief.py  dialogue.py  lulu.py  outline_editor.py  series_handoff.py  story.py  story_spine.py  style.py  (+2 more)
tests/: conftest.py  test_aggregator.py  test_audit.py  test_beat_lock.py  test_bundle.py  test_cascade.py  test_character_arcs.py  test_character_registry.py  test_chunk_bus.py  test_cli.py  test_cli_doctor.py  test_config.py  test_conflicts.py  test_cover.py  test_creative_brief.py  test_dag.py  test_dialogue.py  test_draft.py  test_drift.py  test_e2e.py  test_estimate.py  test_export.py  test_force.py  test_fork.py  test_hooks.py  test_ingest.py  test_io.py  test_list.py  test_llm.py  test_lock.py  test_lulu.py  test_migrate.py  test_outline_editor.py  test_paths.py  test_pipeline.py  test_prose_analyzer.py  test_queue.py  test_regen.py  test_revise.py  test_series_handoff.py  (+21 more)
(+49 files in other folders)
